--- a/Net/GUI/Testing/mainwindow.ui
+++ b/Net/GUI/Testing/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>447</width>
-    <height>256</height>
+    <width>700</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,43 +15,67 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="5" column="2">
-     <widget class="QPushButton" name="btn_FrameShowNext">
-      <property name="text">
-       <string>&gt;&gt;</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="1">
-     <widget class="QPushButton" name="btn_FrameRecognize">
-      <property name="text">
-       <string>Обнаружить</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="0">
-     <widget class="QPushButton" name="btn_FrameShowPrevious">
-      <property name="text">
-       <string>&lt;&lt;</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="3">
-     <widget class="QPushButton" name="btn_OpenFile">
-      <property name="text">
-       <string>Открыть</string>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout_OpenClose">
+      <item>
+       <widget class="QPushButton" name="btn_OpenFile">
+        <property name="text">
+         <string>Открыть</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_Quit">
+        <property name="text">
+         <string>Выйти</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="1" column="3">
-     <widget class="QPushButton" name="btn_Quit">
-      <property name="text">
-       <string>Выйти</string>
+    <item row="4" column="0" colspan="3">
+     <layout class="QHBoxLayout" name="horizontalLayout_btn_PrevNext">
+      <property name="spacing">
+       <number>6</number>
       </property>
-     </widget>
+      <item>
+       <widget class="QPushButton" name="btn_FrameShowPrevious">
+        <property name="text">
+         <string>&lt;&lt;</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_FrameRecognize">
+        <property name="text">
+         <string>Обнаружить</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_FrameShowNext">
+        <property name="text">
+         <string>&gt;&gt;</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item row="0" column="0" rowspan="4" colspan="3">
-     <widget class="QGraphicsView" name="graphicsViewVideo"/>
+     <layout class="QVBoxLayout" name="verticalLayout_widgetVideo">
+      <item>
+       <widget class="QWidget" name="widgetVideo" native="true">
+        <property name="maximumSize">
+         <size>
+          <width>508</width>
+          <height>299</height>
+         </size>
+        </property>
+        <zorder>horizontalLayoutWidget</zorder>
+        <zorder>verticalLayoutWidget_2</zorder>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
