--- a/Net/GUI/Demo/mainwindow.ui
+++ b/Net/GUI/Demo/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>400</height>
+    <width>900</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,6 +64,22 @@
     <item row="0" column="0" rowspan="4" colspan="3">
      <layout class="QVBoxLayout" name="verticalLayout_widgetVideo">
       <item>
+       <widget class="QLabel" name="label_Image">
+        <property name="maximumSize">
+         <size>
+          <width>800</width>
+          <height>452</height>
+         </size>
+        </property>
+        <property name="contextMenuPolicy">
+         <enum>Qt::DefaultContextMenu</enum>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QWidget" name="widgetVideo" native="true">
         <property name="maximumSize">
          <size>
@@ -71,16 +87,12 @@
           <height>299</height>
          </size>
         </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
        </widget>
       </item>
      </layout>
-    </item>
-    <item row="2" column="3">
-     <widget class="QLabel" name="label_Image">
-      <property name="text">
-       <string>TextLabel</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
