imports and naming changes

--- a/Net/GUI/Demo/mainwindow.ui
+++ b/Net/GUI/Demo/mainwindow.ui
@@ -25,6 +25,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="btn_LoadModelMeta">
+        <property name="text">
+         <string>Загрузить модель</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="btn_Quit">
         <property name="text">
          <string>Выйти</string>
